# google-scholar-api

./: .env.example  .gitignore  Dockerfile  README.md  demo.py  demo_scrape.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
src/api/: README.md  __init__.py  cache.py  config.py  main.py  middleware.py  models.py  sheets_logger.py
src/google_scholar_api/: core.py
src/google_scholar_api/backends/: requests_backend.py  selenium_backend.py
src/google_scholar_lib/: __init__.py  core.py  models.py  utils.py
src/google_scholar_lib/backends/: pool.py  selenium_backend.py
